Revision 4.2.4
--------------

- Fix to NotificationOriginator's additionalVarBinds parameter - it is
  not mandatory anymore with the oneliner API. Also additionalVarBinds
  defaulted value changed from None to () meaning no var-binds.

Revision 4.2.3
--------------

- SECURITY FIX: USM subsystem did not verify securityLevel of a request
  to an authoritative SNMP engineinbound against auth/priv protocols
  configured for the user in question. That allowed unauthenticated/unciphered
  access to pysnmp-based Agent even if USM user is configured to provide one.
- Oneliner [Asy6]CommandGenerator now supports optional keyword args
  lookupNames, lookupValues that enable response OID / value looked up at
  MIB and reported as a MibVariable container object carrying relevant
  MIB info.
- Oneliner [Asyn]CommandGenerator now supports symbolic MIB object names to be
  passed within a MibVariable container object which would do a deferred
  MIB lookup for name resolution. This is a new and preferred API which
  obsoletes the tuple-based one (it is still suppored though).
- Oneliner CommandGenerator's class attributes lexicographicMode, maxRows
  and ignoreNonIncreasingOid moved to optional keyword args of nextGen() 
  and bulkGen() methods.
- IPv6/UDP and Local Domain Socket transport interfaces added to the
  oneliner API.
- Mib Instrumentation subsystem re-worked to replace excessive
  MibNode's smiCreate()/smiWrite()/smiDestroy() methods with 
  MibScalarInstance's getValue()/setValue()
- MibTree.readTest[Get]Next() reworked to be called uniformely so
  user could tap on these methods at any level of the MIB tree.
- MibTableColumn.getNextNodeWithValue() unpublished API method obsoleted
  and removed for clarity.
- Hex dumps of binary parts of the protocol added to ease system
  operations analysis.
- SnmpEngineId autogeneration does not call DNS resolver but uses
  local hostname not to depend upon local IP availability and performance.